--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,12 @@ body {
   background-color: #fff;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
+  background-color: #000;
+
+  font-smoothing: subpixel-antialiased;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 a,
@@ -20,10 +26,118 @@ a:visited {
   text-decoration: none;
 }
 
+canvas {
+
+}
+
 .track {
   bottom: 25px;
   color: #fff;
   left: 25px;
   position: fixed;
   z-index: 50;
+}
+
+.message {
+  display:block;
+  background-color:white;
+  padding:20px;
+
+  .content {
+    .title {
+      font-weight:bold;
+      font-size:125%;
+    }
+
+    p {
+      margin:0;
+    }
+
+    a, a:link, a:visited {
+      color:#333;
+      font-weight:bold;
+    }
+  }
+
+  &.icon {
+    svg {
+      float:left;
+      width:40px;
+      height:40px;
+      margin-left:5px;
+    }
+
+    .content {
+      margin-left:65px;
+    }
+  }
+}
+
+.description {
+  position:absolute;
+  top:10px;
+  display:block;
+  text-align:center;
+  width:100%;
+  z-index:5000;
+
+  .detector-no-webgl & {
+    display:none;
+  }
+
+  .message {
+    display:inline-block;
+  }
+}
+
+.fallback-wrapper {
+  font-size:12px;
+  line-height:1.5;
+  display:none;
+  height:100%;
+  left:0;
+  position:absolute;
+  top:0;
+  width:100%;
+}
+
+.fallback {
+  display:table-cell;
+  vertical-align:middle;
+  text-align:center;
+
+  .fallback-content {
+    display:inline-block;
+    text-align:left;
+    padding:5%;
+  }
+
+  .message {
+    margin-bottom:20px;
+  }
+
+  .video {
+    position:relative;
+    padding-bottom:56.25%; /* 16:9 */
+    height: 0;
+
+    iframe, object, embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.detector-mobile-unsupported {
+  canvas,
+  .track {
+    display:none;
+  }
+
+  .fallback-wrapper {
+    display:table;
+  }
 }
