--- a/sin-waves/src/scss/app.scss
+++ b/sin-waves/src/scss/app.scss
@@ -8,15 +8,14 @@ body {
 }
 
 body {
-  background-color: #fff;
+  background-color: #000;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
-  background-color: #000;
 
-  font-smoothing: subpixel-antialiased;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-  text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
+  font-smoothing: subpixel-antialiased;
+  text-rendering: optimizeLegibility !important;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .004);
 }
 
 a,
@@ -24,10 +23,6 @@ a:link,
 a:visited {
   color: #fff;
   text-decoration: none;
-}
-
-canvas {
-
 }
 
 .track {
@@ -39,94 +34,98 @@ canvas {
 }
 
 .message {
-  display:block;
-  background-color:white;
-  padding:20px;
+  background-color: #fff;
+  display: block;
+  padding: 20px;
 
   .content {
     .title {
-      font-weight:bold;
-      font-size:125%;
+      font-size: 125%;
+      font-weight: bold;
     }
 
     p {
-      margin:0;
+      margin: 0;
     }
 
-    a, a:link, a:visited {
-      color:#333;
-      font-weight:bold;
+    a,
+    a:link,
+    a:visited {
+      color: #333;
+      font-weight: bold;
     }
   }
 
   &.icon {
     svg {
-      float:left;
-      width:40px;
-      height:40px;
-      margin-left:5px;
+      float: left;
+      height: 40px;
+      margin-left: 5px;
+      width: 40px;
     }
 
     .content {
-      margin-left:65px;
+      margin-left: 65px;
     }
   }
 }
 
 .description {
-  position:absolute;
-  top:10px;
-  display:block;
-  text-align:center;
-  width:100%;
-  z-index:5000;
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 100%;
+  z-index: 5000;
 
   .detector-no-webgl & {
-    display:none;
+    display: none;
   }
 
   .message {
-    display:inline-block;
+    display: inline-block;
   }
 }
 
 .fallback-wrapper {
-  font-size:12px;
-  line-height:1.5;
-  display:none;
-  height:100%;
-  left:0;
-  position:absolute;
-  top:0;
-  width:100%;
+  display: none;
+  font-size: 12px;
+  height: 100%;
+  left: 0;
+  line-height: 1.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .fallback {
-  display:table-cell;
-  vertical-align:middle;
-  text-align:center;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 
   .fallback-content {
-    display:inline-block;
-    text-align:left;
-    padding:5%;
+    display: inline-block;
+    padding: 5%;
+    text-align: left;
   }
 
   .message {
-    margin-bottom:20px;
+    margin-bottom: 20px;
   }
 
   .video {
-    position:relative;
-    padding-bottom:56.25%; /* 16:9 */
     height: 0;
+    padding-bottom: 56.25%; // 16:9
+    position: relative;
 
-    iframe, object, embed {
+    iframe,
+    object,
+    embed {
+      height: 100%;
+      left: 0;
       position: absolute;
       top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
     }
   }
 }
@@ -134,10 +133,10 @@ canvas {
 .detector-mobile-unsupported {
   canvas,
   .track {
-    display:none;
+    display: none;
   }
 
   .fallback-wrapper {
-    display:table;
+    display: table;
   }
 }
